fixed alignment issue i just noticed

--- a/public/css/about.css
+++ b/public/css/about.css
@@ -22,7 +22,7 @@ header {
 
 h1 {
 
-    font-size: 60px;
+    font-size: 40px;
     font-weight: 400;
 }
 
