--- a/public/css/details.css
+++ b/public/css/details.css
@@ -15,6 +15,10 @@ header {
     color: white;
 }
 
+body {
+    background-color: black;
+}
+
 h1 {
     font-size: 50px;
     width: 90%;
