--- a/public/css/portfolio.css
+++ b/public/css/portfolio.css
@@ -16,6 +16,10 @@ header {
     padding: 40px;
 }
 
+body {
+    background-color: black;
+}
+
 h1 {
     font-size: 43px;
     z-index: 434;
@@ -277,5 +281,34 @@ img {
 
     .btns img {
         height: 30px;
+    }
+
+    .work {
+        display: grid;
+        margin: 0%;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .workcard {
+        width: 100%;
+        border-radius: 5px;
+    }
+
+    .workcard .all {
+        width: 70px;
+        height: 20px;
+        font-size: 9px;
+    }
+
+    .workcard h4 {
+        font-size: 10px;
+    }
+
+    a {
+        text-decoration: none;
+    }
+
+    .all img {
+        height: 10px;
     }
 }
